# AdventOfCode2022

./: README.md  Sandbox.ipynb  pyproject.toml
day1/: day1.py
day2/: day2.py  test_day2.py
day3/: day3.py  test_day3.py
day4/: day4.py  test_day4.py
day5/: day5.py
day6/: day6.py
