[tool.poetry]
name = "AOC2022"
version = "0.1.0"
description = ""
authors = ["Rebecca Lovering <rebecca.lovering@upstack.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
pandas = "^1.4.4"
psycopg2-binary = "^2.9.3"
dbt-core = "^1.0.3"
dbt-postgres = "^1.0.0"
notebook = "^6.4.12"
black = "^22.10.0"
boto3 = "^1.26.0"
smart-open = "^6.2.0"
xlwings = "^0.28.1"
openpyxl = "^3.0.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
